lobby done, main page in progress

--- a/public/styles/lobby.css
+++ b/public/styles/lobby.css
@@ -1,13 +1,42 @@
+*{
+  --primary-color: #27796b;
+  --primary-color-light: #72c4bc;
+  --primary-color-very-light: #a3ddd0;
+
+  --light-gray-green:#82b7ae;
+  --very-light-gray-green: #cafaf2;
+
+  --text-color: #000;
+  --profile-pic-background: #262625;
+  
+}
 body{
-    background-color: #1a1a1a;
-    color: #fff;
+    /*background-color: #687f7b;*/
+    color: var(--text-color);
+    background-image: url("../images/tictactoe-background.jpg");
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+
+}
+
+.title-header{
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 5.5rem; /* Adjust the font size as needed */
+  font-weight: bold;
+  letter-spacing: 0.15em; /* Adjust the letter spacing for the desired effect */
+  text-align: center;
+  margin: 1rem 0;
+  color:var(--very-light-gray-green)
 }
 
 #form-container{
     width: 90%;
     max-width: 600px;
     border-radius: 10px;
-    background-color: #262625;
+    background-color: var(--light-gray-green);
     position: fixed;
     top: 50%;
     left: 50%;
@@ -18,10 +47,10 @@ body{
     border-radius: 10px 10px 0 0;
     padding: 30px;
     text-align: center;
-    background-color: #363739;
+    background-color: var(--very-light-gray-green);
     margin: 0;
-    font-size: 18px;
-    font-size: 300;
+    font-size: 20px;
+    font-weight:bolder;
     line-height: 0;
 }
 
@@ -30,34 +59,58 @@ body{
 }
 
 .form-field-wrapper {
+  position: relative;
     width: 100%;
     box-sizing: border-box;
     margin-bottom: 20px;
   }
   
-  .form-field-wrapper label {
+.form-field-wrapper label {
     font-size: 14px;
+    font-weight: bold;
     line-height: 1.7em;
     margin-bottom: 10px;
     display: block;
   }
+
   
+
   .form-field-wrapper input {
     box-sizing: border-box;
-    color: #fff;
+    color: var(--text-color);
     width: 100%;
     margin: 0;
-    border: none;
+    border: 1px solid #fff;
+    outline: 0;
     border-radius: 5px;
     padding: 16px 20px;
     font-size: 15px;
-    background-color: #3f434a;
+    /*transition: border-color 0.2s;*/
+    background-color: var(--very-light-gray-green);
+}
+
+  .form-field-wrapper input:focus{
+    border: 1px solid;
+    border-color: var(--primary-color);
+    background-color: #fff;
   }
   
+  .input-error{
+    border: 1px solid red;
+  }
+
+  .error-message{
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+    color: rgb(184, 7, 7);
+    font-size: 0.8rem;
+}
+
   .form-field-wrapper button[type='submit'] {
     margin-top: 32px;
     cursor: pointer;
-    background-color: #845695;
+    background-color: var(--primary-color);
     border: none;
     color: #fff;
     font-size: 16px;
@@ -69,4 +122,71 @@ body{
     border-radius: 5px;
     gap: 10px;
   }
+
+  .circle-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .circle-link {
+    display: flex;
+    /*Useflexboxtocentercontent*/justify-content: center;
+    align-items: center;
+    width: 90px;
+    height: 90px;
+    margin: 5px;
+    border: 2.5px solid var(--very-light-gray-green);
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: pointer;
+             /* Add cursor style for indicating interactivity */ 
+}
+
+.circle-link:hover{
+  border-color: #0071116c;
+}
+
+.clicked{
+  border-color: #007111;
+}
+
+.circle-image {
+    width: 63px;
+    height: 63px;
+    object-fit: cover;
+    pointer-events: none;
+}
+
+
+@media (max-width: 720px) {
+  .circle-link {
+    width: 70px; 
+    height: 70px;  
+    
+    margin: 5px;
+  }
+
+  .circle-image {
+    width: 49px;
+    height: 49px;
+}
   
+}
+  
+
+@media (max-width: 420px) {
+  .circle-link {
+    width: 40px; 
+    height: 40px;  
+    
+    margin: 5px;
+  }
+
+  .circle-image {
+    width: 28px;
+    height: 28px;
+}
+  
+}
