--- a/public/styles/lobby.css
+++ b/public/styles/lobby.css
@@ -132,7 +132,7 @@ body{
 
   .circle-link {
     display: flex;
-    /*Useflexboxtocentercontent*/justify-content: center;
+    justify-content: center;
     align-items: center;
     width: 90px;
     height: 90px;
@@ -141,7 +141,6 @@ body{
     border-radius: 50%;
     overflow: hidden;
     cursor: pointer;
-             /* Add cursor style for indicating interactivity */ 
 }
 
 .circle-link:hover{
