--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,4 +2,169 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    --primary-color: #27796b;
+    --primary-color-light: #72c4bc;
+    --primary-color-very-light: #a3ddd0;
+
+    --light-gray-green:#82b7ae;
+    --very-light-gray-green: #cafaf2;
+
+    --text-color: #000;
+    --profile-pic-background: #262625;
+}
+.title-header{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 5.5rem; /* Adjust the font size as needed */
+    font-weight: bold;
+    letter-spacing: 0.15em; /* Adjust the letter spacing for the desired effect */
+    text-align: center;
+    margin: 1rem 0;
+    color:var(--very-light-gray-green)
+  }
+
+#mainContent{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: center;
+    display: flex; 
+    justify-content: space-evenly;
+    align-items: flex-start;
+    padding: 13px 5%;
+}
+
+.player-profile{
+    padding: 20px;
+    font-family: sans-serif;
+    text-align: center;
+    max-width: 200px;
+    border-radius: 10px;
+    height: 320px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    padding: 20px;
+    background-color: var(--primary-color);
+}
+.image-sign-container{
+    position: relative;
+    margin-bottom:15px;
+}
+
+.image-border {
+   display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--very-light-gray-green);
+    width: 150px;
+    height: 150px;
+    margin: 5px;
+    /*border: 2.5px solid var(--very-light-gray-green);*/
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: pointer;
+}
+.image-border img{
+    width: 105px;
+    height: 105px;
+    object-fit: cover;
+    pointer-events: none;
+}
+
+.user-name{
+    font-size: 1.2em;
+    font-weight: bold;
+    color: #fff;
+}
+
+.user-sign{
+    position: absolute;
+    font-family: sans-serif;
+    font-size: 40px;
+    font-weight: bold;
+    bottom: 0;
+    right: 0;
+    margin: 0;
+    padding-right: 20px;
+}
+
+#gameContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    /*position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    flex-basis: 50%;*/
+    
+}
+
+#cellContainer{
+    display: grid;
+    grid-template-columns: repeat(3,auto);
+    width: 358px;
+    gap:12px;
+    background-color: var(--primary-color);
+    padding: 17px;
+    border-radius: 10px;
+}
+
+.cell{
+    width: 100px;
+    height: 100px;
+    border: none;
+    border-radius: 8px;
+    background-color: var(--very-light-gray-green);
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    font-size:75px;
+    font-family: sans-serif;
+    font-weight: bold;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#statusText{
+    margin-top: 15px;
+}
+
+#restartBtn{
+    margin-top: 15px;
+}
+
+
+
+.not-connected{
+    background-color: #454545;
+}
+
+.player-active{
+    border: 2px solid green;
+}
+
+.player-waiting{
+    border: 2px solid red;
+}
+
+.score-counter{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
+    background-color: #fff;
+    padding: 5px 15px 5px 15px;
+    border-radius: 15px;
+}
+
+@media (max-width: 980px) {
+    #mainContent{
+        flex-direction: column;
+        width: 100%;
+    }
+    .player-profile
+    {
+        width: 100%;
+        position: static;
+    }
+
 }
