--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -13,7 +13,7 @@
     --text-color: #000;
     --profile-pic-background: #262625;
 }
-.title-header{
+.titleHeader{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: 5.5rem; /* Adjust the font size as needed */
     font-weight: bold;
@@ -32,7 +32,9 @@
     padding: 13px 5%;
 }
 
-.player-profile{
+/*------------------------------------styling player profile ---------------------------------------*/
+
+.playerProfile{
     padding: 20px;
     font-family: sans-serif;
     text-align: center;
@@ -43,12 +45,12 @@
     padding: 20px;
     background-color: var(--primary-color);
 }
-.image-sign-container{
+.playerProfile .image-sign-container{
     position: relative;
     margin-bottom:15px;
 }
 
-.image-border {
+.playerProfile .image-border {
    display: flex;
     justify-content: center;
     align-items: center;
@@ -61,20 +63,20 @@
     overflow: hidden;
     cursor: pointer;
 }
-.image-border img{
+.playerProfile .image-border img{
     width: 105px;
     height: 105px;
     object-fit: cover;
     pointer-events: none;
 }
 
-.user-name{
+.playerProfile .user-name{
     font-size: 1.2em;
     font-weight: bold;
     color: #fff;
 }
 
-.user-sign{
+.playerProfile .user-sign{
     position: absolute;
     font-family: sans-serif;
     font-size: 40px;
@@ -84,6 +86,21 @@
     margin: 0;
     padding-right: 20px;
 }
+
+.playerProfile .score-counter{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 15px;
+    background-color: #fff;
+    padding: 5px 15px 5px 15px;
+    border-radius: 15px;
+}
+
+/*--------------------------------------styling player profile - END -------------------------------------*/
+
+
+/*------------------------------------------styling game container ---------------------------------------*/
 
 #gameContainer{
     display: flex;
@@ -101,7 +118,7 @@
 #cellContainer{
     display: grid;
     grid-template-columns: repeat(3,auto);
-    width: 358px;
+    width: 418px;
     gap:12px;
     background-color: var(--primary-color);
     padding: 17px;
@@ -109,8 +126,8 @@
 }
 
 .cell{
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 120px;
     border: none;
     border-radius: 8px;
     background-color: var(--very-light-gray-green);
@@ -132,6 +149,7 @@
     margin-top: 15px;
 }
 
+/*------------------------------------------styling game container - END ---------------------------------------*/
 
 
 .not-connected{
@@ -146,22 +164,86 @@
     border: 2px solid red;
 }
 
-.score-counter{
+
+
+
+
+/*------------------------------styling pop up ---------------------------------------*/
+
+.popUp{
+    height: 400px;
+    width: 800px;
+    position: absolute;
+    transform:translate(-50%,-50%) scale(0);
+    top: 50%;
+    left: 50%;
+    border-radius: 12px;
+    background-color: rgba(114, 196, 188, 0.9); /*var(--primary-color-light),alimaloprozirnija*/
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     align-items: center;
-    margin-top: 15px;
-    background-color: #fff;
-    padding: 5px 15px 5px 15px;
-    border-radius: 15px;
+    justify-content: center;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
 }
+    
+.popUp .popUpImage
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 110px;
+    height: 110px;
+}
+
+.popUpImage i {
+    font-size: 4em;
+}
+
+.popUp .popUpMessage{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 3rem;
+    color: #fff;
+    margin-top: 10px;
+}
+
+.popUp .popUpButtonContainer{
+    margin: 20px 0 20px 0;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+}
+
+.popUp .popUpButton, #restartBtn{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 18px;
+    font-weight: bold;
+    background-color: var(--primary-color);
+    width: 160px;
+    padding: 20px;
+    margin: 0 10px 0 10px;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    transition-duration: 0.3s;
+
+}
+
+.popUpButton:hover, .popUpButton:focus, .popUpButton:active{
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+}
+
+/* ------------------------------------------styling pop up - END ---------------------------------*/
 
 @media (max-width: 980px) {
     #mainContent{
         flex-direction: column;
         width: 100%;
     }
-    .player-profile
+    .playerProfile
     {
         width: 100%;
         position: static;
