--- a/public/styles/lobby.css
+++ b/public/styles/lobby.css
@@ -160,6 +160,12 @@ body{
 
 
 @media (max-width: 720px) {
+    .title-header{
+      font-size: 3rem;
+      margin-bottom: 15px;
+    }
+
+
   .circle-link {
     width: 70px; 
     height: 70px;  
@@ -176,6 +182,11 @@ body{
   
 
 @media (max-width: 420px) {
+  .title-header{
+    font-size: 2rem;
+    margin-bottom: 15px;
+  }
+
   .circle-link {
     width: 40px; 
     height: 40px;  
